--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,6 +4,8 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+ /* Adapted by Leone Veiga - Plus and Times - www.plusandtimes.com */
+
 body,
 html {
     width: 100%;
