--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -10,6 +10,8 @@ body,
 html {
     width: 100%;
     height: 100%;
+    margin: 0;
+    border: 0;
 }
 
 body,
@@ -33,7 +35,7 @@ h6 {
     padding-bottom: 1px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    /*background: url(../img/intro-bg.jpg) no-repeat center center;*/
     background-size: cover;
 }
 
