--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -305,6 +305,12 @@ p.copyright {
     width:  30px;
     height: 30px;
     }
+
+    .img-flag-pat {
+    width:  15px;
+    height: 15px;
+    }
+
 }
 
 @media(min-width:100px) {
@@ -327,6 +333,11 @@ p.copyright {
     width:  30px;
     height: 30px;
     }   
+
+    .img-flag-pat {
+    width:  15px;
+    height: 15px;
+    }
 }
 
 @media(min-width:400px) {
@@ -349,6 +360,12 @@ p.copyright {
     width:  50px;
     height: 50px;
     }
+
+    .img-flag-pat {
+    width:  25px;
+    height: 25px;
+    }
+
 }
 
 @media(min-width:600px) {
@@ -371,6 +388,11 @@ p.copyright {
     .img-emoticon-pat {
     width:  50px;
     height: 50px;
+    }
+
+    .img-flag-pat {
+    width:  25px;
+    height: 25px;
     }
 }
 
@@ -395,6 +417,11 @@ p.copyright {
     width:  50px;
     height: 50px;
     }
+
+    .img-flag-pat {
+    width:  25px;
+    height: 25px;
+    }
 }
 
 @media(min-width:1000px) {
@@ -417,7 +444,12 @@ p.copyright {
     .img-emoticon-pat {
     width:  50px;
     height: 50px;
-}
+    }
+
+    .img-flag-pat {
+    width:  25px;
+    height: 25px;
+    }
 
 }
 
